# example-haskell-kubernetes-service

./: .gitignore  README.md  STATUS.md  build.sh  buildup.sh  deploy.sh  example-haskell-kubernetes-deployment.yaml  example-haskell-kubernetes-service.yaml  example-haskell-kubernetes.yaml  refresh.sh  teardown.sh  test.sh  x.yaml  y.yaml
a/: CHANGELOG.md  Dockerfile  Main.hs  build.sh  service-a.cabal
b/: CHANGELOG.md  Dockerfile  Main.hs  build.sh  service-b.cabal
c/: Dockerfile  Main.hs  build.sh  service-c.cabal
d/: Cargo.toml  Dockerfile  build.sh
d/src/: main.rs
