cabal-version:       >=1.10

name:                service-b
version:             0.1.0.0
license-file:        LICENSE
author:              Samuel Schlesinger
maintainer:          samuel@simspace.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable service-b
  main-is:             Main.hs
  build-depends:
    aeson>= 1.4 && <1.5,
    base >=4.13 && <4.14,
    bytestring >=0.10 && <0.11,
    http-client >=0.6 && <0.7,
    http-types >=0.12 && <0.13,
    mtl >=2.2 && <2.3,
    servant-server >=0.17 && <0.18,
    text >= 1.2 && < 1.3,
    transformers >=0.4 && <0.6,
    wai >=3.2 && <3.3,
    warp >=3.3 && <3.4
  default-language:    Haskell2010
